Optimize font usage.

--- a/styles/Device.module.scss
+++ b/styles/Device.module.scss
@@ -102,7 +102,7 @@
 }
 
 .length-controller > input::selection {
-  background-color: hsl(0 0 10);
+  background-color: hsl(0 0% 10%);
   color: $color-primary;
 }
 
