--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,21 @@
 @font-face {
   font-family: Play;
-  src: url(/font/Play-Regular.ttf);
+  src: url('/font/play-regular-webfont.woff2') format('woff2'),
+       url('/font/play-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
   font-display: optional;
+  unicode-range: U+20-7F;
+}
+
+@font-face {
+  font-family: Play;
+  src: url('/font/play-bold-webfont.woff2') format('woff2'),
+       url('/font/play-bold-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: optional;
+  unicode-range: U+20-7F;
 }
 
 body {
@@ -9,9 +23,6 @@ body {
   margin: 0;
   font-family: Play, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: linear-gradient(30deg, hsla(308, 94%, 24%, 1) 0%, hsla(250, 96%, 12%, 1) 65%, hsla(249, 94%, 2%, 1) 100%);
-  // background: linear-gradient(0deg, hsla(335, 100%, 51%, 1) 0%, hsla(250, 96%, 20%, 1) 100%) no-repeat;
-  // background: linear-gradient(195deg, hsla(240, 24%, 8%) 66%, hsla(240, 31%, 20%) 100%);
-  // background: linear-gradient(0deg, hsla(346, 99%, 50%, 1) 0%, hsla(291, 85%, 35%, 1) 45%, hsla(316, 40%, 22%, 1) 90%);
 }
 
 a {
