--- a/styles/Display.module.scss
+++ b/styles/Display.module.scss
@@ -26,12 +26,12 @@
 }
 
 .screen {
-  margin: 0;
-  padding: .125em .25em;
+  padding: 0 .25em;
   background: hsla(145 99% 65% / .1);
   border: .03125rem solid $color-primary;
   font-family: inherit;
   font-size: 2rem;
+  line-height: 1.5em;
   color: hsla(145 99% 65% / .6);
   width: 44ch;
   height: 1.5em;
