--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,7 +26,7 @@
 
 body {
   font-family: Play, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: linear-gradient(30deg, hsla(308, 94%, 24%, 1) 0%, hsla(250, 96%, 12%, 1) 65%, hsla(249, 94%, 2%, 1) 100%);
+  background: linear-gradient(30deg, hsla(308, 94%, 24%, 1) 0%, hsla(250, 96%, 12%, 1) 65%, hsla(249, 94%, 2%, 1) 100%) no-repeat;
 }
 
 a {
